Add comments field to Taxon objects
