# server/docs/swagger.yaml
@@ -294,6 +294,8 @@ definitions:
       code:
         example: ASEaquaticus
         type: string
+      comment:
+        type: string
       id:
         example: <UUID>
         type: string
@@ -327,6 +329,8 @@ definitions:
         description: Autogenerated if not provided
         example: ASEaquaticus
         minLength: 4
+        type: string
+      comment:
         type: string
       name:
         example: Asellus aquaticus
@@ -411,6 +415,8 @@ definitions:
       code:
         example: ASEaquaticus
         type: string
+      comment:
+        type: string
       id:
         example: <UUID>
         type: string
@@ -431,6 +437,8 @@ definitions:
             type: string
           code:
             example: ASEaquaticus
+            type: string
+          comment:
             type: string
           id:
             example: <UUID>
