# server/models/taxonomy/taxon.go
@@ -23,6 +23,7 @@ type TaxonInput struct {
 	Parent     string  `json:"parent" binding:"required,exist=taxonomy::Taxon.code"`                // Parent taxon code
 	Code       *string `json:"code,omitempty" example:"ASEaquaticus" binding:"omitnil,alpha,min=4"` // Autogenerated if not provided
 	Authorship *string `json:"authorship,omitempty" example:"(Linnaeus, 1758)" binding:"omitnil"`
+	Comment    *string `json:"comment,omitempty" edgedb:"comment" binding:"omitnil"`
 } // @name TaxonInput
 
 type TaxonDB struct {
@@ -32,6 +33,7 @@ type TaxonDB struct {
 	Taxon      `edgedb:"$inline"`
 	Authorship edgedb.OptionalStr `edgedb:"authorship" json:"authorship" example:"(Linnaeus, 1758)"`
 	Anchor     bool               `edgedb:"anchor" json:"anchor"`
+	Comment    edgedb.OptionalStr `json:"comment" edgedb:"comment"`
 	Meta       models.Meta        `edgedb:"meta" json:"meta" binding:"required"`
 } // @name TaxonDB
 
